# tfl_victoria_alert

./: .env  README.md  pyproject.toml
.github/workflows/: python-app.yml  tfl_victoria_alert.yml
src/tfl_victoria_alert/: __init__.py  alert_state.json  main.py
